--- a/reveal/index.html
+++ b/reveal/index.html
@@ -39,15 +39,17 @@
 <div class="slides">
 <section data-markdown>
     <script type="text/template">
-## 2018Fall 分組網際簡報
+## 2019 Spring 協同產品設計實習
 
-### 虎科大機械設計工程系
+### 國立虎尾科技大學
+### 機械設計工程系
 
 <small>
-Created by [KMOLab](http://lab.kmol.info/)
+Created by [許育誠]
 </small>
 
-[2018 Fall 分組網誌](./../blog/index.html)
+[2019 Spring 協同產品設計實習](https://s40423160.github.io/cd2019/content/index.html)
+40423160 許育誠
 
 
     </script>
