--- a/config/content.htm
+++ b/config/content.htm
@@ -21,10 +21,16 @@
 <p>這是我畫的足球員</p>
 <p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6</a></p>
 <p>畫完後就讓繪製足球架的同學去加入到手足球系統裡面</p>
-<h2>W6</h2>
+<h2>W6 W7</h2>
 <p>這週在做<a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
 <p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
 <p>接近圓柱時會後退 轉彎 再前進</p>
 <p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
 <p></p>
+<h2>W8</h2>
+<p>這周是在做實習任務三<a href="http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm</a><span> </span></p>
+<p>先利用onshape繪製類似的構造</p>
+<p><a href="https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442">https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442</a></p>
+<p>再轉入到vrep裡面做模擬</p>
+<p>這周我把個人網誌做出來 </p>
 <p></p>
