--- a/content/W1 W2.html
+++ b/content/W1 W2.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a></li></ul></nav><section>心得 << <a href='心得.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W1 W2</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>心得 << <a href='心得.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W1 W2</h1>
 <p>第二週因為卡到228連假，所以老師在2/22一口氣連上了8堂課，有點吃不消</p>
 <p>上課內容為建立個人個可攜裝置</p>
 <p>包括python wscite(SciTE) tcc HxD</p>
