--- a/content/W8.html
+++ b/content/W8.html
@@ -67,10 +67,10 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a></li></ul></nav><section>W5 << <a href='W5.html'>Previous</a> <br /><h1>W6</h1>
-<p>這週在做<a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
-<p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
-<p>接近圓柱時會後退 轉彎 再前進</p>
-<p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
-<p></p>
-<p></p><br />W5 << <a href='W5.html'>Previous</a> </section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>W6 W7 << <a href='W6 W7.html'>Previous</a> <br /><h1>W8</h1>
+<p>這周是在做實習任務三<a href="http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm</a><span> </span></p>
+<p>先利用onshape繪製類似的構造</p>
+<p><a href="https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442">https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442</a></p>
+<p>再轉入到vrep裡面做模擬</p>
+<p>這周我把個人網誌做出來 </p>
+<p></p><br />W6 W7 << <a href='W6 W7.html'>Previous</a> </section></div></body></html>
