--- a/content/W4.html
+++ b/content/W4.html
@@ -67,6 +67,6 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a></li></ul></nav><section>W3 << <a href='W3.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>W4</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>W3 << <a href='W3.html'>Previous</a> <a href='W5.html'>Next</a> >> W5<br /><h1>W4</h1>
 <p><span>這週主要是透過SSH做為可以不用打在打帳號密碼，建立步驟中就遇到許多問題了，就一直重複觀看老師上傳的影片，許多指令也很不熟悉，剛好網路也遇到問題，老師就再教了IPV6跟IPV4的使用<span style="background-color: #ffffff; color: #626262;">。</span></span></p>
 <br />W3 << <a href='W3.html'>Previous</a> <a href='W5.html'>Next</a> >> W5</section></div></body></html>
