--- a/content/W6 W7.html
+++ b/content/W6 W7.html
@@ -67,7 +67,10 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section> <a href='W1 W2.html'>Next</a> >> W1 W2<br /><h1>心得</h1>
-<p>內容為2019 Spring 協同產品設計實習 40423160 的心得</p>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>W5 << <a href='W5.html'>Previous</a> <a href='W8.html'>Next</a> >> W8<br /><h1>W6 W7</h1>
+<p>這週在做<a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
+<p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
+<p>接近圓柱時會後退 轉彎 再前進</p>
+<p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
 <p></p>
-<br /> <a href='W1 W2.html'>Next</a> >> W1 W2</section></div></body></html>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</section></div></body></html>
