--- a/content/心得.html
+++ b/content/心得.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a></li></ul></nav><section> <a href='W1 W2.html'>Next</a> >> W1 W2<br /><h1>心得</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section> <a href='W1 W2.html'>Next</a> >> W1 W2<br /><h1>心得</h1>
 <p>內容為2019 Spring 協同產品設計實習 40423160 的心得</p>
 <p></p>
 <br /> <a href='W1 W2.html'>Next</a> >> W1 W2</section></div></body></html>
