--- a/content/可攜裝置.html
+++ b/content/可攜裝置.html
@@ -67,7 +67,13 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>W1 W2 << <a href='W1 W2.html'>Previous</a> <a href='W4.html'>Next</a> >> W4<br /><h1>W3</h1>
-<p>第三週為建立鑰匙，這次上課的內容更之前上的內容有許多地方不一樣，所以前幾堂課都上的比較吃力，不過也是用github作為主要的協同工具，希望可以跟上進度<span style="background-color: #ffffff; color: #626262;">。</span></p>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>課程 << <a href='課程.html'>Previous</a> <a href='ungit.html'>Next</a> >> ungit<br /><h1>可攜裝置</h1>
 <p></p>
-<br />W1 W2 << <a href='W1 W2.html'>Previous</a> <a href='W4.html'>Next</a> >> W4</section></div></body></html>
+<p class="title style-scope ytd-video-primary-info-renderer"><a href="https://2019wcm.blogspot.com/search/label/ungit">https://2019wcm.blogspot.com/search/label/ungit</a></p>
+<p class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">建立 Windows 64 位元可攜程式系統</yt-formatted-string></p>
+<p class="title style-scope ytd-video-primary-info-renderer"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/uEq_GtkkPx8" width="550"></iframe></p>
+<p class="title style-scope ytd-video-primary-info-renderer"></p>
+<p></p>
+<p class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">如何使用 ungit 進行倉儲內容的新增提交與推送</yt-formatted-string></p>
+<p class="title style-scope ytd-video-primary-info-renderer"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/chp0B_kJRTc" width="550"></iframe></p>
+<br />課程 << <a href='課程.html'>Previous</a> <a href='ungit.html'>Next</a> >> ungit</section></div></body></html>
