--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -12,8 +12,7 @@
 <p>第三週為建立鑰匙，這次上課的內容更之前上的內容有許多地方不一樣，所以前幾堂課都上的比較吃力，不過也是用github作為主要的協同工具，希望可以跟上進度<span style="background-color: #ffffff; color: #626262;">。</span></p>
 <p></p>
 <h2>W4</h2>
-<p><span>這週主要是透過SSH做為可以不用打在打帳號密碼，建立步驟中就遇到許多問題了，就一直重複觀看老師上傳的影片，許多指令也很不熟悉，剛好網路也遇到問題，老師就再教了IPV6跟IPV4的使用<span style="background-color: #ffffff; color: #626262;">。</span></span></p>
-<h2>W5</h2>
+<p><span>這週主要是透過SSH做為可以不用再打帳號密碼，更新github的時候就透過金鑰，可以直接將隨身碟跟github座連接，不過在建立步驟中就遇到許多問題了，就一直重複觀看老師上傳的影片，許多指令也很不熟悉，剛好網路也遇到問題，老師就再教了IPV6跟IPV4的使用方法跟連接ssh的方法<span style="background-color: #ffffff; color: #626262;">。</span></span></p><h2>W5</h2>
 <p>這個禮拜是第一次分組作業, 我被分配到的任務是畫手足球員</p>
 <p>參考老師給的尺寸 </p>
 <p><a href="http://mde.tw/cd2019/content/%E5%AF%A6%E7%BF%92%E4%BB%BB%E5%8B%99%E4%BA%8C.html">http://mde.tw/cd2019/content/%E5%AF%A6%E7%BF%92%E4%BB%BB%E5%8B%99%E4%BA%8C.html</a></p>
@@ -21,10 +20,16 @@
 <p>這是我畫的足球員</p>
 <p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6</a></p>
 <p>畫完後就讓繪製足球架的同學去加入到手足球系統裡面</p>
-<h2>W6</h2>
+<h2>W6 W7</h2>
 <p>這週在做<a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
 <p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
 <p>接近圓柱時會後退 轉彎 再前進</p>
 <p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
 <p></p>
+<h2>W8</h2>
+<p>這周是在做實習任務三<a href="http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm</a><span> </span></p>
+<p>先利用onshape繪製類似的構造</p>
+<p><a href="https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442">https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442</a></p>
+<p>再轉入到vrep裡面做模擬</p>
+<p>這周我把個人網誌做出來 </p>
 <p></p>
