--- a/content/ssh.html
+++ b/content/ssh.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>W1 W2 << <a href='W1 W2.html'>Previous</a> <a href='W4.html'>Next</a> >> W4<br /><h1>W3</h1>
-<p>第三週為建立鑰匙，這次上課的內容更之前上的內容有許多地方不一樣，所以前幾堂課都上的比較吃力，不過也是用github作為主要的協同工具，希望可以跟上進度<span style="background-color: #ffffff; color: #626262;">。</span></p>
-<p></p>
-<br />W1 W2 << <a href='W1 W2.html'>Previous</a> <a href='W4.html'>Next</a> >> W4</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>ungit << <a href='ungit.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>ssh</h1>
+<p>ssh 連結 github 倉儲</p>
+<p><a href="https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs">https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs</a></p>
+<br />ungit << <a href='ungit.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</section></div></body></html>
