--- a/config/content.htm
+++ b/config/content.htm
@@ -32,6 +32,11 @@
 <h2>ssh</h2>
 <p>ssh 連結 github 倉儲</p>
 <p><a href="https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs">https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs</a></p>
+<p></p>
+<h2>BubbleRob</h2>
+<p>參考網址: <a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a></p>
+<p>個人實際操作影片: <a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
+<p></p>
 <h1>心得</h1>
 <p>內容為2019 Spring 協同產品設計實習 40423160 的心得</p>
 <p></p>
@@ -68,3 +73,8 @@
 <p>再轉入到vrep裡面做模擬</p>
 <p>這周我把個人網誌做出來 </p>
 <p></p>
+<h1>協同倉儲</h1>
+<p></p>
+<p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
