--- a/content/ssh.html
+++ b/content/ssh.html
@@ -67,7 +67,8 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>ungit << <a href='ungit.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>ssh</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>ungit << <a href='ungit.html'>Previous</a> <a href='BubbleRob.html'>Next</a> >> BubbleRob<br /><h1>ssh</h1>
 <p>ssh 連結 github 倉儲</p>
 <p><a href="https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs">https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs</a></p>
-<br />ungit << <a href='ungit.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</section></div></body></html>
+<p></p>
+<br />ungit << <a href='ungit.html'>Previous</a> <a href='BubbleRob.html'>Next</a> >> BubbleRob</section></div></body></html>
