--- a/content/協同倉儲.html
+++ b/content/協同倉儲.html
@@ -67,11 +67,8 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>心得 << <a href='心得.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W1 W2</h1>
-<p>第二週因為卡到228連假，所以老師在2/22一口氣連上了8堂課，有點吃不消</p>
-<p>上課內容為建立個人個可攜裝置</p>
-<p>包括python wscite(SciTE) tcc HxD</p>
-<p>然後再建立一個start.bat作為開啟的工具</p>
-<p><img alt="" height="521" src="./../images/未命名.png" width="400"/></p>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W8 << <a href='W8.html'>Previous</a> <br /><h1>協同倉儲</h1>
 <p></p>
-<br />心得 << <a href='心得.html'>Previous</a> <a href='W3.html'>Next</a> >> W3</section></div></body></html>
+<p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p><br />W8 << <a href='W8.html'>Previous</a> </section></div></body></html>
