--- a/content/BubbleRob.html
+++ b/content/BubbleRob.html
@@ -67,11 +67,8 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>心得 << <a href='心得.html'>Previous</a> <a href='W3.html'>Next</a> >> W3<br /><h1>W1 W2</h1>
-<p>第二週因為卡到228連假，所以老師在2/22一口氣連上了8堂課，有點吃不消</p>
-<p>上課內容為建立個人個可攜裝置</p>
-<p>包括python wscite(SciTE) tcc HxD</p>
-<p>然後再建立一個start.bat作為開啟的工具</p>
-<p><img alt="" height="521" src="./../images/未命名.png" width="400"/></p>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>ssh << <a href='ssh.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得<br /><h1>BubbleRob</h1>
+<p>參考網址: <a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a></p>
+<p>個人實際操作影片: <a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
 <p></p>
-<br />心得 << <a href='心得.html'>Previous</a> <a href='W3.html'>Next</a> >> W3</section></div></body></html>
+<br />ssh << <a href='ssh.html'>Previous</a> <a href='心得.html'>Next</a> >> 心得</section></div></body></html>
