--- a/content/可攜裝置.html
+++ b/content/可攜裝置.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul></nav><section>課程 << <a href='課程.html'>Previous</a> <a href='ungit.html'>Next</a> >> ungit<br /><h1>可攜裝置</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>課程 << <a href='課程.html'>Previous</a> <a href='ungit.html'>Next</a> >> ungit<br /><h1>可攜裝置</h1>
 <p></p>
 <p class="title style-scope ytd-video-primary-info-renderer"><a href="https://2019wcm.blogspot.com/search/label/ungit">https://2019wcm.blogspot.com/search/label/ungit</a></p>
 <p class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">建立 Windows 64 位元可攜程式系統</yt-formatted-string></p>
