--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -33,11 +33,10 @@
 <p>ssh 連結 github 倉儲</p>
 <p><a href="https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs">https://www.youtube.com/watch?time_continue=5&amp;v=t4PslV5Abjs</a></p>
 <p></p>
-<h1>BubbleRob</h1>
+<h2>BubbleRob</h2>
 <p>參考網址: <a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a></p>
 <p>個人實際操作影片: <a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
-<p></p>
-<h1>心得</h1>
+<p>小組操作影片: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/content/BubbleRob.html">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/content/BubbleRob.html</a></p><h1>心得</h1>
 <p>內容為2019 Spring 協同產品設計實習 40423160 的心得</p>
 <p></p>
 <h2>W1 W2</h2>
@@ -65,16 +64,19 @@
 <p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
 <p>接近圓柱時會後退 轉彎 再前進</p>
 <p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
-<p></p>
-<h2>W8</h2>
+<p>趁著清明連假把之前的進度補上</p>
+<p>也開始製作個人的倉儲 網誌 投影片</p><h2>W8</h2>
 <p>這周是在做實習任務三<a href="http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm</a><span> </span></p>
 <p>先利用onshape繪製類似的構造</p>
 <p><a href="https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442">https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442</a></p>
 <p>再轉入到vrep裡面做模擬</p>
 <p>這周我把個人網誌做出來 </p>
-<p></p>
-<h1>協同倉儲</h1>
+<p>之前推倉儲的時候沒注意到用重新抓得kmol系統</p>
+<p>導致有個推倉儲的紀錄是寫scrum-3</p>
+<p>發現後就馬上更正了</p><h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
+<p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
 <p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
+<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p>
