--- a/content/W8.html
+++ b/content/W8.html
@@ -73,5 +73,6 @@ $(function(){
 <p><a href="https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442">https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442</a></p>
 <p>再轉入到vrep裡面做模擬</p>
 <p>這周我把個人網誌做出來 </p>
-<p></p>
-<br />W6 W7 << <a href='W6 W7.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
+<p>之前推倉儲的時候沒注意到用重新抓得kmol系統</p>
+<p>導致有個推倉儲的紀錄是寫scrum-3</p>
+<p>發現後就馬上更正了</p><br />W6 W7 << <a href='W6 W7.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
