--- a/content/W6 W7.html
+++ b/content/W6 W7.html
@@ -72,5 +72,5 @@ $(function(){
 <p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
 <p>接近圓柱時會後退 轉彎 再前進</p>
 <p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
-<p></p>
-<br />W5 << <a href='W5.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</section></div></body></html>
+<p>趁著清明連假把之前的進度補上</p>
+<p>也開始製作個人的倉儲 網誌 投影片</p><br />W5 << <a href='W5.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</section></div></body></html>
