--- a/content/協同倉儲.html
+++ b/content/協同倉儲.html
@@ -71,4 +71,6 @@ $(function(){
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
-<p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p><br />W8 << <a href='W8.html'>Previous</a> </section></div></body></html>
+<p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
+<p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
+<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p><br />W8 << <a href='W8.html'>Previous</a> </section></div></body></html>
