--- a/reveal/index.html
+++ b/reveal/index.html
@@ -206,6 +206,7 @@ https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20a
     <script type="text/template">
 # 期中影片
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/qMkSTBJOs5A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </script>
 </section>
