--- a/content/W5.html
+++ b/content/W5.html
@@ -67,12 +67,15 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W4 << <a href='W4.html'>Previous</a> <a href='W6 W7.html'>Next</a> >> W6 W7<br /><h1>W5</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W4 << <a href='W4.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>W5</h1>
 <p>這個禮拜是第一次分組作業, 我被分配到的任務是畫手足球員</p>
 <p>參考老師給的尺寸 </p>
 <p><a href="http://mde.tw/cd2019/content/%E5%AF%A6%E7%BF%92%E4%BB%BB%E5%8B%99%E4%BA%8C.html">http://mde.tw/cd2019/content/%E5%AF%A6%E7%BF%92%E4%BB%BB%E5%8B%99%E4%BA%8C.html</a></p>
 <p>然後作稍為的微調</p>
 <p>這是我畫的足球員</p>
+<p><img alt="" height="609" src="./../images/40423160-W5.png" width="498"/></p>
 <p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/b11029a44b92b2093616ddc6</a></p>
 <p>畫完後就讓繪製足球架的同學去加入到手足球系統裡面</p>
-<br />W4 << <a href='W4.html'>Previous</a> <a href='W6 W7.html'>Next</a> >> W6 W7</section></div></body></html>
+<p><span>最後跟小組完成的手足球</span></p>
+<p><span><img alt="" height="705" src="./../images/40423160-W5-2.png" width="1271"/></span></p>
+<br />W4 << <a href='W4.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</section></div></body></html>
