--- a/content/W7.html
+++ b/content/W7.html
@@ -67,13 +67,10 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>課程 << <a href='課程.html'>Previous</a> <a href='ungit.html'>Next</a> >> ungit<br /><h1>可攜裝置</h1>
-<p></p>
-<p class="title style-scope ytd-video-primary-info-renderer"><a href="https://2019wcm.blogspot.com/search/label/ungit">https://2019wcm.blogspot.com/search/label/ungit</a></p>
-<p class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">建立 Windows 64 位元可攜程式系統</yt-formatted-string></p>
-<p class="title style-scope ytd-video-primary-info-renderer"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/uEq_GtkkPx8" width="550"></iframe></p>
-<p class="title style-scope ytd-video-primary-info-renderer"></p>
-<p></p>
-<p class="title style-scope ytd-video-primary-info-renderer"><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">如何使用 ungit 進行倉儲內容的新增提交與推送</yt-formatted-string></p>
-<p class="title style-scope ytd-video-primary-info-renderer"><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/chp0B_kJRTc" width="550"></iframe></p>
-<br />課程 << <a href='課程.html'>Previous</a> <a href='ungit.html'>Next</a> >> ungit</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W6 << <a href='W6.html'>Previous</a> <a href='W8.html'>Next</a> >> W8<br /><h1>W7</h1>
+<p>清明節連假</p>
+<p>把之前缺的東西補上</p>
+<p>慢慢跟上老師的進度</p>
+<p>在小組中被分配的工作也做得差不多了</p>
+<p>所以開始建立個人倉儲 網誌 投影片</p>
+<br />W6 << <a href='W6.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</section></div></body></html>
