--- a/content/W8.html
+++ b/content/W8.html
@@ -67,12 +67,14 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W6 W7 << <a href='W6 W7.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲<br /><h1>W8</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W7 << <a href='W7.html'>Previous</a> <a href='W9.html'>Next</a> >> W9<br /><h1>W8</h1>
 <p>這周是在做實習任務三<a href="http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/buildingAModelTutorial.htm</a><span> </span></p>
 <p>先利用onshape繪製類似的構造</p>
+<p><img alt="" height="589" src="./../images/40423160-W8.png" width="809"/></p>
 <p><a href="https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442">https://cad.onshape.com/documents/d4300f1277b25602bbac6e5a/w/2f8dde5ed823b97d20ac86c1/e/e56abdd445d4c86cb793d442</a></p>
 <p>再轉入到vrep裡面做模擬</p>
 <p>這周我把個人網誌做出來 </p>
 <p>之前推倉儲的時候沒注意到用重新抓得kmol系統</p>
 <p>導致有個推倉儲的紀錄是寫scrum-3</p>
-<p>發現後就馬上更正了</p><br />W6 W7 << <a href='W6 W7.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
+<p>發現後就馬上更正了</p>
+<br />W7 << <a href='W7.html'>Previous</a> <a href='W9.html'>Next</a> >> W9</section></div></body></html>
