--- a/content/W9.html
+++ b/content/W9.html
@@ -67,10 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6 W7.html'>W6 W7</a><li><a href='W8.html'>W8</a></li></ul><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W5 << <a href='W5.html'>Previous</a> <a href='W8.html'>Next</a> >> W8<br /><h1>W6 W7</h1>
-<p>這週在做<a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
-<p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
-<p>接近圓柱時會後退 轉彎 再前進</p>
-<p>完成影片<a href="https://www.youtube.com/watch?v=iYqxYQV8FZc">https://www.youtube.com/watch?v=iYqxYQV8FZc</a></p>
-<p>趁著清明連假把之前的進度補上</p>
-<p>也開始製作個人的倉儲 網誌 投影片</p><br />W5 << <a href='W5.html'>Previous</a> <a href='W8.html'>Next</a> >> W8</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W8 << <a href='W8.html'>Previous</a> <a href='期中影片.html'>Next</a> >> 期中影片<br /><h1>W9</h1>
+<p>期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
+<br />W8 << <a href='W8.html'>Previous</a> <a href='期中影片.html'>Next</a> >> 期中影片</section></div></body></html>
