--- a/content/個人影片.html
+++ b/content/個人影片.html
@@ -67,7 +67,15 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W8 << <a href='W8.html'>Previous</a> <a href='W10.html'>Next</a> >> W10<br /><h1>W9</h1>
-<p>期中影片</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
-<br />W8 << <a href='W8.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</section></div></body></html>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>期中影片 << <a href='期中影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲<br /><h1>個人影片</h1>
+<p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-1</yt-formatted-string></p>
+<p><img alt="" src="https://www.youtube.com/watch?v=_KHJyEbXOg8&amp;t=2s"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_KHJyEbXOg8?t=2s" width="560"></iframe></p>
+<p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-2</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r7JNB57n-qE" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">BubbleRob tutorial</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">期中影片</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
+<p>送球機構</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/VuySdgoiAL8" width="560"></iframe></p>
+<p></p><br />期中影片 << <a href='期中影片.html'>Previous</a> <a href='協同倉儲.html'>Next</a> >> 協同倉儲</section></div></body></html>
