--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -67,7 +67,7 @@
 <p>畫完後就讓繪製足球架的同學去加入到手足球系統裡面</p>
 <p><span>最後跟小組完成的手足球</span></p>
 <p><span><img alt="" height="705" src="/images/40423160-W5-2.png" width="1271"/></span></p>
-<h2>W6 </h2>
+<h2>W6</h2>
 <p>這週在做BubbleRob tutorial</p>
 <p>參考網址: <a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
 <p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
@@ -90,6 +90,25 @@
 <p>之前推倉儲的時候沒注意到用重新抓得kmol系統</p>
 <p>導致有個推倉儲的紀錄是寫scrum-3</p>
 <p>發現後就馬上更正了</p>
+<h2>W9</h2>
+<p>期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
+<h2>W10</h2>
+<p>教學用virtualbox在隨身碟做一個虛擬主機<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">, 可用來開發網際可程式化機械設計合成系統</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/IqTN7dyz3FM" width="560"></iframe></p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/6GFHDRnLw-s" width="560"></iframe></p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/XV-etyLPzPo" width="560"></iframe></p>
+<h2>W11</h2>
+<p>開始分組做期末報告, 並由組長做協同者, 開始更新期末專案</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_dF92K0jG8U" width="560"></iframe></p>
+<p></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ncF0c1pvBzg" width="560"></iframe></p>
+<p></p>
+<h1>期中影片</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
+<h1>個人影片</h1>
 <h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
