--- a/content/W6.html
+++ b/content/W6.html
@@ -67,7 +67,7 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>W5 << <a href='W5.html'>Previous</a> <a href='W7.html'>Next</a> >> W7<br /><h1>W6</h1>
 <p>這週在做BubbleRob tutorial</p>
 <p>參考網址: <a href="http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm">http://www.coppeliarobotics.com/helpFiles/en/bubbleRobTutorial.htm</a><span> </span></p>
 <p>利用V-rep製作BubbleRob tutorial 使用感測器可以在圓柱圈內跑</p>
