--- a/content/協同倉儲.html
+++ b/content/協同倉儲.html
@@ -67,10 +67,10 @@ $(function(){
 
 </ul>
 </confmenu></header>
-<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>期中影片 << <a href='期中影片.html'>Previous</a> <br /><h1>協同倉儲</h1>
+<div class='container'><nav><ul id='css3menu1' class='topmenu'><li><a href='課程.html'>課程</a><ul><li><a href='可攜裝置.html'>可攜裝置</a><li><a href='ungit.html'>ungit</a><li><a href='ssh.html'>ssh</a><li><a href='BubbleRob.html'>BubbleRob</a></li></ul><li><a href='心得.html'>心得</a><ul><li><a href='W1 W2.html'>W1 W2</a><li><a href='W3.html'>W3</a><li><a href='W4.html'>W4</a><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W7.html'>W7</a><li><a href='W8.html'>W8</a><li><a href='W9.html'>W9</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a></li></ul><li><a href='期中影片.html'>期中影片</a><li><a href='個人影片.html'>個人影片</a><li><a href='協同倉儲.html'>協同倉儲</a></li></ul></nav><section>個人影片 << <a href='個人影片.html'>Previous</a> <br /><h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組網站: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1</a></p>
 <p>小組blog: <a href="https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog" rel="nofollow">https://mdekmol.github.io/cd2019b-task1-2019cdb_t1_g3_1/blog</a></p>
 <p>個人倉儲: <a href="https://github.com/s40423160/cd2019">https://github.com/s40423160/cd2019</a></p>
-<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p><br />期中影片 << <a href='期中影片.html'>Previous</a> </section></div></body></html>
+<p>個人投影片: <a href="https://s40423160.github.io/cd2019/reveal/index.html#/">https://s40423160.github.io/cd2019/reveal/index.html#/</a></p><br />個人影片 << <a href='個人影片.html'>Previous</a> </section></div></body></html>
