--- a/config/content.htm
+++ b/config/content.htm
@@ -105,6 +105,27 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_dF92K0jG8U" width="560"></iframe></p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ncF0c1pvBzg" width="560"></iframe></p>
+<h2>W12</h2>
+<p></p>
+<h2>W13</h2>
+<p>今天開始分配期末報告的工作任務</p>
+<p>我目前是在做送球機構</p>
+<p>第一次門框畫好後</p>
+<p>才發現卡到邊框</p>
+<p>所以做了修改</p>
+<p>門框</p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802</a></p>
+<p>組合件</p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad</a></p>
+<p>門框在V-rep模擬的狀況</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0" width="560"></iframe>第二次修改門框後的模擬</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p><h2>W14</h2>
+<p></p>
+<h2>W15</h2>
+<p></p>
+<h2>W16</h2>
+<p></p>
+<h2>W17</h2>
 <p></p>
 <h1>期中影片</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
