--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -105,10 +105,42 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_dF92K0jG8U" width="560"></iframe></p>
 <p></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ncF0c1pvBzg" width="560"></iframe></p>
+<h2>W12</h2>
+<p></p>
+<h2>W13</h2>
+<p>今天開始分配期末報告的工作任務</p>
+<p>我目前是在做送球機構</p>
+<p>第一次門框畫好後</p>
+<p>才發現卡到邊框</p>
+<p>所以做了修改</p>
+<p>門框</p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/face386b0bb2c0c1fa8f4802</a></p>
+<p>組合件</p>
+<p><a href="https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad">https://cad.onshape.com/documents/1bd73a7377db9cdd414172b8/w/324e3c900c47a65ea715f134/e/22c1a2c3652c158f4182a2ad</a></p>
+<p>門框在V-rep模擬的狀況</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ei2KLT8OeA0" width="560"></iframe>第二次修改門框後的模擬</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/nczBcHk52tc" width="560"></iframe></p><h2>W14</h2>
+<p></p>
+<h2>W15</h2>
+<p></p>
+<h2>W16</h2>
+<p></p>
+<h2>W17</h2>
 <p></p>
 <h1>期中影片</h1>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/qMkSTBJOs5A" width="560"></iframe></p>
 <h1>個人影片</h1>
+<p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-1</yt-formatted-string></p>
+<p><img alt="" src="https://www.youtube.com/watch?v=_KHJyEbXOg8&amp;t=2s"/><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/_KHJyEbXOg8?t=2s" width="560"></iframe></p>
+<p>建立<yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">可攜系統-2</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/r7JNB57n-qE" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">BubbleRob tutorial</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
+<p><yt-formatted-string class="style-scope ytd-video-primary-info-renderer" force-default-style="">期中影片</yt-formatted-string></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iYqxYQV8FZc" width="560"></iframe></p>
+<p>送球機構</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/VuySdgoiAL8" width="560"></iframe></p>
+<p></p>
 <h1>協同倉儲</h1>
 <p></p>
 <p>小組倉儲: <a href="https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1">https://github.com/mdekmol/cd2019b-task1-2019cdb_t1_g3_1</a></p>
